<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"
        android:text="@string/comparision" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="8dp">
        <TableRow>
            <TextView
                android:layout_column="0"
                android:text=""
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:text="@string/selected_nproduct"
                android:gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_column="2"
                android:text="@string/top_nproduct"
                android:gravity="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/image"
                android:textStyle="bold"/>
            <ImageView
                android:layout_column="1"
                android:id="@+id/img1"
                android:gravity="center" />

            <ImageView
                android:layout_column="2"
                android:id="@+id/img2"
                android:gravity="center" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/name"
                android:textStyle="bold"/>
            <TextView
                android:layout_column="1"
                android:id="@+id/name1"
                android:gravity="center" />

            <TextView
                android:layout_column="2"
                android:id="@+id/name2"
                android:gravity="center" />
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/category"
                android:textStyle="bold"/>
            <TextView
                android:layout_column="1"
                android:id="@+id/cate1"
                android:gravity="center"/>

            <TextView
                android:layout_column="2"
                android:id="@+id/cate2"
                android:gravity="center"/>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/clicks"
                android:textStyle="bold"/>
            <TextView
                android:layout_column="1"
                android:id="@+id/click1"
                android:gravity="center"/>

            <TextView
                android:layout_column="2"
                android:id="@+id/click2"
                android:gravity="center"/>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="Added To\nCart"
                android:textStyle="bold"/>
            <TextView
                android:layout_column="1"
                android:id="@+id/atc1"
                android:gravity="center"/>

            <TextView
                android:layout_column="2"
                android:id="@+id/atc2"
                android:gravity="center"/>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:layout_column="0"
                android:gravity="center"
                android:text="Performance"
                android:textStyle="bold"/>
            <TextView
                android:layout_column="1"
                android:id="@+id/p1"
                android:gravity="center"/>

            <TextView
                android:layout_column="2"
                android:id="@+id/p2"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
</layout>