<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterShop">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:padding="@dimen/_2sdp"
            android:layout_weight="0.2"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_reversearrow"
            />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="0.6"
            android:src="@drawable/findologo1" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:paddingEnd="@dimen/_30sdp" />

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_22sdp"
                    app:ci_drawable="@drawable/selected_dot"
                    app:ci_drawable_unselected="@drawable/default_dot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/add_shop_image"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/enter_shop_details"
                        android:textSize="@dimen/_12sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_box"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/shop_name"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/_10sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gst_box"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/getin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/gst_number"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/_10sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lic_box"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/licNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/licence_number"
                            android:inputType="text"
                            android:textSize="@dimen/_10sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_box"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top"
                            android:hint="@string/address"
                            android:inputType="textMultiLine"
                            android:textSize="@dimen/_10sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/loc_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_location_on_map"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:textColor="@color/linkColor"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/select_plan"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/durationDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableEnd="@drawable/baseline_expand_circle_down_24"
                    android:inputType="none" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="end"
                    android:text=""
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/initButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:background="@drawable/button_active"
                    android:fontFamily="@font/poppins_bold"
                    android:letterSpacing="0.04"
                    android:text="Complete Registration"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>