<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleTextColor="@color/text_primary"
                app:collapsedTitleTextColor="@color/text_primary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:contentScrim="@color/white"
                app:titleEnabled="true"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:background="#E1F8DC"
                    >

                    <TextView
                        android:id="@+id/shop_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:letterSpacing="0.04"
                        android:text="@string/shop_name"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Logo" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/address_of_shop"
                        android:textColor="@color/text_secondary"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/shop_name" />

                    <ImageView
                        android:id="@+id/add_pro"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_15sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/baseline_add_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/Logo"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="0.6"
                        android:scaleType="centerCrop"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/findologo1" />

                    <TextView
                        android:id="@+id/item_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/_45_items_listed"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/shop_name" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="@color/text_primary"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/item_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/_100sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/product_item" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>